kubernetes/applications/passbolt/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: passbolt
  labels:
    app.kubernetes.io/name: passbolt
    app.kubernetes.io/component: namespace
